<?xml version="1.0"?>
<package format="2">
  <name>occupancy_mapping_benchmarks</name>
  <version>0.0.1</version>
  <description>occupancy_mapping_benchmarks</description>
  <maintainer email="nicolov@users.noreply.github.com">nicolov</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosbag</depend>
  <depend>octomap</depend>
  <depend>octomap_ros</depend>
  <depend>rosfmt</depend>
  <depend>backward_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>skimap_ros</depend>
  <export/>
</package>
