<package format="2">
	<name>rosfmt</name>
	<description>
		fmt is an open-source formatting library for C++.
		It can be used as a safe and fast alternative to (s)printf and IOStreams.
	</description>
	<license>BSD</license>
	<version>6.0.0</version>

	<maintainer email="max.schwarz@ais.uni-bonn.de">Max Schwarz</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rosconsole</depend>
</package>
